--- a/templates/scoreview.html
+++ b/templates/scoreview.html
@@ -8,18 +8,18 @@
 </style>
 <form method="post" action="/savescore" id="savescore">
   <div class="form-control bg-info">
-    <div class="row g-3">
-      <div class="col-sm-7">
+    <div class="row g-4">
+      <div class="col-sm-8">
         <label for="matchid">Match Between </label>
         <input id="matchid" type="text" name="matchid" Value="{{ .Match}}">
-        <label for="matchid">Scoreboard Background </label>
-        <input list="bgcolorl" id="bgcolor" name="bgcolor" value="{{ .BgColor}}">
-        <datalist id="bgcolorl">
-          <option value="white">white</option>
-          <option value="black">black</option>
-          <option value="yellow">yellow</option>
-        </datalist>
+        <label for="bgcolor">Scoreboard Background </label>
+        <input type="color" id="bgcolor" name="bgcolor" value="{{ .BgColor}}">
+        <label for="bgcolor">Head Color </label>
+        <input id="headcolor" type="color" name="headcolor" Value="{{ .HeadColor}}">
+        <label for="bgcolor">Score Color </label>
+        <input id="scorecolor" type="color" name="scorecolor" Value="{{ .ScoreColor}}">
         </div>
+
     </div> <br>
     <div class="row g-4">
       <div class="col-sm-3">
