--- a/templates/scoreboardview.html
+++ b/templates/scoreboardview.html
@@ -9,6 +9,7 @@
   @font-face {
    font-family: DigitalScoreBoard;
    src: url(assets/css/led_display-7.ttf);
+   /*src: url(assets/css/bold_led_board-7.ttf); */
 }
 html, body {
   height: 100%;
