--- a/templates/_sidenav.html
+++ b/templates/_sidenav.html
@@ -5,9 +5,13 @@
             <div class="nav">
                 <div class="sb-sidenav-menu-heading  text-white sm">Menu</div>
 
-                    <a class="nav-link" href="#" onClick="MyWindow=window.open('scoreboardview','MyWindow','width=1000,height=800'); return false;">
+                <a class="nav-link" href="#" onClick="MyWindow=window.open('scoreboardview','MyWindow','width=1000,height=800'); return false;">
                     <div class="sb-nav-link-icon"><i class="fas fa-eye"></i></div>
                     View Scoreboard
+                </a>
+                <a class="nav-link" href="#" onClick="MyWindow=window.open('clock','CLOCKWindow'); return false;">
+                    <div class="sb-nav-link-icon"><i class="fas fa-clock"></i></div>
+                    Clock
                 </a>
             </div>
         </div>
